--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   sliding_up_panel: ^2.0.0+1
   flutter_hooks: ^0.18.6
   hooks_riverpod: ^2.3.6
+  linear_timer: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
